fixed issue with media query for 768 and 980px hiding links- there was an issue with z-index for some reason (z-index on <640px and native is zero)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -336,7 +336,6 @@ input.submitButton:hover {
 }
 
 
-
 @media screen and (max-width: 980px)  {
 
     .hidden {
@@ -345,12 +344,14 @@ input.submitButton:hover {
 
     .containerBottom {
         width: 100%;
-        
-        
+        margin-left: auto;
+    margin-right: auto;
+        position: relative;
         font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
         height: 60rem;
         margin-top: auto;
         top: 73px;
+        z-index: 0;
     }
     .containerTop {
         position: fixed;
@@ -639,7 +640,8 @@ input.submitButton:hover {
         font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
         height: 30rem;
         margin-top: auto;
-        
+        position: relative;
+        z-index: 0;
     }
     .containerTop {
         position: fixed;
